--- a/src/styles/desktop/components/people_page.scss
+++ b/src/styles/desktop/components/people_page.scss
@@ -16,8 +16,10 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+  display: none;
 
   &.desktop-people-page-open {
+    display: block;
     .page-background,
     #team-accordion {
       animation: blur-in $ANIMATION_DURATION_BLUR forwards;
